Name and number of the birds separated by putting the number in its own tag.
Adding a vue element for the number of the birds.

--- a/src/config/zwergschwan_seasons.json
+++ b/src/config/zwergschwan_seasons.json
@@ -9,7 +9,8 @@
         "active": true,
         "color": "#000000",
         "data": "data/zwergschwan/011T-2022.csv",
-        "name": "Simon\n(011T)",
+        "name": "Simon",
+        "id": "(011T)",
         "opacity": 1,
         "daterange": []
       },
@@ -17,7 +18,8 @@
         "active": true,
         "color": "#1CE6FF",
         "data": "data/zwergschwan/013T-2022.csv",
-        "name": "Clyde\n(013T)",
+        "name": "Clyde",
+        "id": "(013T)",
         "opacity": 1,
         "daterange": []
       },
@@ -25,7 +27,8 @@
         "active": true,
         "color": "#FF34FF",
         "data": "data/zwergschwan/014T-2022.csv",
-        "name": "Kai\n(014T)",
+        "name": "Kai",
+        "id": "(014T)",
         "opacity": 1,
         "daterange": []
       },
@@ -33,7 +36,8 @@
         "active": true,
         "color": "#FF4A46",
         "data": "data/zwergschwan/015T-2022.csv",
-        "name": "Axel\n(015T)",
+        "name": "Axel",
+        "id": "(015T)",
         "opacity": 1,
         "daterange": []
       },
@@ -41,7 +45,8 @@
         "active": true,
         "color": "#008941",
         "data": "data/zwergschwan/016T-2022.csv",
-        "name": "Anne\n(016T)",
+        "name": "Anne",
+        "id": "(016T)",
         "opacity": 1,
         "daterange": []
       },
@@ -49,7 +54,8 @@
         "active": true,
         "color": "#006FA6",
         "data": "data/zwergschwan/017T-2022.csv",
-        "name": "Jutta\n(017T)",
+        "name": "Jutta",
+        "id": "(017T)",
         "opacity": 1,
         "daterange": []
       },
@@ -57,7 +63,8 @@
         "active": true,
         "color": "#A30059",
         "data": "data/zwergschwan/018T-2022.csv",
-        "name": "Lina\n(018T)",
+        "name": "Lina",
+        "id": "(018T)",
         "opacity": 1,
         "daterange": []
       },
@@ -65,7 +72,8 @@
         "active": true,
         "color": "#FFDBE5",
         "data": "data/zwergschwan/019T-2022.csv",
-        "name": "Lisa\n(019T)",
+        "name": "Lisa",
+        "id": "(019T)",
         "opacity": 1,
         "daterange": []
       },
@@ -73,7 +81,8 @@
         "active": true,
         "color": "#7A4900",
         "data": "data/zwergschwan/020T-2022.csv",
-        "name": "Toni\n(020T)",
+        "name": "Toni",
+        "id": "(020T)",
         "opacity": 1,
         "daterange": []
       },
@@ -81,7 +90,8 @@
         "active": true,
         "color": "#0000A6",
         "data": "data/zwergschwan/021T-2022.csv",
-        "name": "Hannah\n(021T)",
+        "name": "Hannah",
+        "id": "(021T)",
         "opacity": 1,
         "daterange": []
       },
@@ -89,7 +99,8 @@
         "active": true,
         "color": "#63FFAC",
         "data": "data/zwergschwan/022T-2022.csv",
-        "name": "Joel\n(022T)",
+        "name": "Joel",
+        "id": "(022T)",
         "opacity": 1,
         "daterange": []
       },
@@ -97,7 +108,8 @@
         "active": true,
         "color": "#B79762",
         "data": "data/zwergschwan/023T-2022.csv",
-        "name": "Ljubow\n(023T)",
+        "name": "Ljubow",
+        "id": "(023T)",
         "opacity": 1,
         "daterange": []
       },
@@ -105,7 +117,8 @@
         "active": true,
         "color": "#004D43",
         "data": "data/zwergschwan/024T-2022.csv",
-        "name": "Yamal\n(024T)",
+        "name": "Yamal",
+        "id": "(024T)",
         "opacity": 1,
         "daterange": []
       },
@@ -113,7 +126,8 @@
         "active": true,
         "color": "#997D87",
         "data": "data/zwergschwan/026T-2022.csv",
-        "name": "Hans\n(026T)",
+        "name": "Hans",
+        "id": "(026T)",
         "opacity": 1,
         "daterange": []
       },
@@ -121,7 +135,8 @@
         "active": true,
         "color": "#DEAFD6",
         "data": "data/zwergschwan/029T-2022.csv",
-        "name": "Luis\n(029T)",
+        "name": "Luis",
+        "id": "(029T)",
         "opacity": 1,
         "daterange": []
       },
@@ -129,7 +144,8 @@
         "active": true,
         "color": "#1B4400",
         "data": "data/zwergschwan/030T-2022.csv",
-        "name": "Thor\n(030T)",
+        "name": "Thor",
+        "id": "(030T)",
         "opacity": 1,
         "daterange": []
       },
@@ -137,7 +153,8 @@
         "active": true,
         "color": "#4FC601",
         "data": "data/zwergschwan/031T-2022.csv",
-        "name": "Kopernikus\n(031T)",
+        "name": "Kopernikus",
+        "id": "(031T)",
         "opacity": 1,
         "daterange": []
       },
@@ -145,7 +162,8 @@
         "active": true,
         "color": "#4A3B53",
         "data": "data/zwergschwan/033T-2022.csv",
-        "name": "Freya\n(033T)",
+        "name": "Freya",
+        "id": "(033T)",
         "opacity": 1,
         "daterange": []
       },
@@ -153,7 +171,8 @@
         "active": true,
         "color": "#FF2F80",
         "data": "data/zwergschwan/034T-2022.csv",
-        "name": "Vincent\n(034T)",
+        "name": "Vincent",
+        "id": "(034T)",
         "opacity": 1,
         "daterange": []
       },
@@ -161,7 +180,8 @@
         "active": true,
         "color": "#61615A",
         "data": "data/zwergschwan/035T-2022.csv",
-        "name": "Bonnie\n(035T)",
+        "name": "Bonnie",
+        "id": "(035T)",
         "opacity": 1,
         "daterange": []
       },
@@ -169,7 +189,8 @@
         "active": true,
         "color": "#BA0900",
         "data": "data/zwergschwan/036T-2022.csv",
-        "name": "Elisabeth\n(036T)",
+        "name": "Elisabeth",
+        "id": "(036T)",
         "opacity": 1,
         "daterange": []
       },
@@ -177,7 +198,8 @@
         "active": true,
         "color": "#6B7900",
         "data": "data/zwergschwan/037T-2022.csv",
-        "name": "Natascha\n(037T)",
+        "name": "Natascha",
+        "id": "(037T)",
         "opacity": 1,
         "daterange": []
       },
@@ -185,7 +207,8 @@
         "active": true,
         "color": "#00C2A0",
         "data": "data/zwergschwan/038T-2022.csv",
-        "name": "Frauke\n(038T)",
+        "name": "Frauke",
+        "id": "(038T)",
         "opacity": 1,
         "daterange": []
       },
@@ -193,7 +216,8 @@
         "active": true,
         "color": "#FFAA92",
         "data": "data/zwergschwan/039T-2022.csv",
-        "name": "Irina\n(039T)",
+        "name": "Irina",
+        "id": "(039T)",
         "opacity": 1,
         "daterange": []
       },
@@ -201,7 +225,8 @@
         "active": true,
         "color": "#FF90C9",
         "data": "data/zwergschwan/040T-2022.csv",
-        "name": "Eileen\n(040T)",
+        "name": "Eileen",
+        "id": "(040T)",
         "opacity": 1,
         "daterange": []
       },
@@ -209,7 +234,8 @@
         "active": true,
         "color": "#B903AA",
         "data": "data/zwergschwan/041T-2022.csv",
-        "name": "Heintje\n(041T)",
+        "name": "Heintje",
+        "id": "(041T)",
         "opacity": 1,
         "daterange": []
       },
@@ -217,7 +243,8 @@
         "active": true,
         "color": "#D16100",
         "data": "data/zwergschwan/042T-2022.csv",
-        "name": "Albireo\n(042T)",
+        "name": "Albireo",
+        "id": "(042T)",
         "opacity": 1,
         "daterange": []
       },
@@ -225,7 +252,8 @@
         "active": true,
         "color": "#DDEFFF",
         "data": "data/zwergschwan/043T-2022.csv",
-        "name": "Doro\n(043T)",
+        "name": "Doro",
+        "id": "(043T)",
         "opacity": 1,
         "daterange": []
       },
@@ -233,7 +261,8 @@
         "active": true,
         "color": "#000035",
         "data": "data/zwergschwan/044T-2022.csv",
-        "name": "Rasputin\n(044T)",
+        "name": "Rasputin",
+        "id": "(044T)",
         "opacity": 1,
         "daterange": []
       },
@@ -241,7 +270,8 @@
         "active": true,
         "color": "#7B4F4B",
         "data": "data/zwergschwan/045T-2022.csv",
-        "name": "Tschaika\n(045T)",
+        "name": "Tschaika",
+        "id": "(045T)",
         "opacity": 1,
         "daterange": []
       },
@@ -249,7 +279,8 @@
         "active": true,
         "color": "#300018",
         "data": "data/zwergschwan/047T-2022.csv",
-        "name": "Deneb\n(047T)",
+        "name": "Deneb",
+        "id": "(047T)",
         "opacity": 1,
         "daterange": []
       },
@@ -257,7 +288,8 @@
         "active": true,
         "color": "#0AA6D8",
         "data": "data/zwergschwan/048T-2022.csv",
-        "name": "Nadeschda\n(048T)",
+        "name": "Nadeschda",
+        "id": "(048T)",
         "opacity": 1,
         "daterange": []
       },
@@ -265,7 +297,8 @@
         "active": true,
         "color": "#013349",
         "data": "data/zwergschwan/049T-2022.csv",
-        "name": "Thelma\n(049T)",
+        "name": "Thelma",
+        "id": "(049T)",
         "opacity": 1,
         "daterange": []
       },
@@ -273,7 +306,8 @@
         "active": true,
         "color": "#00846F",
         "data": "data/zwergschwan/050T-2022.csv",
-        "name": "Ragnar\n(050T)",
+        "name": "Ragnar",
+        "id": "(050T)",
         "opacity": 1,
         "daterange": []
       },
@@ -281,7 +315,8 @@
         "active": true,
         "color": "#5A0007",
         "data": "data/zwergschwan/051T-2022.csv",
-        "name": "Gagarin\n(051T)",
+        "name": "Gagarin",
+        "id": "(051T)",
         "opacity": 1,
         "daterange": []
       },
@@ -289,7 +324,8 @@
         "active": true,
         "color": "#A1C299",
         "data": "data/zwergschwan/052T-2022.csv",
-        "name": "Gerard\n(052T)",
+        "name": "Gerard",
+        "id": "(052T)",
         "opacity": 1,
         "daterange": []
       },
