add SAMPLE_PICK feature for more liberal sampling

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "python",
             "request": "launch",
             "program": "${workspaceFolder}/contrib/upload/ftp.py",
-            "args": ["zwergschwan-2022.env"],
+            "args": [".env.local"],
             "console": "integratedTerminal",
             "justMyCode": true
         }
