Set default daterange. Insert clear button. Update locales.

--- a/src/config/zwergschwan_seasons.json
+++ b/src/config/zwergschwan_seasons.json
@@ -3,7 +3,7 @@
     "action": "mdi-crosshairs-gps",
     "active": true,
     "title": "2022/2023",
-    "defaulDaterange": [],
+    "defaultDaterangeDays": 60,
     "daterange": [],
     "turtledoves": [
       {
