--- a/src/config/saebelschnaebler_seasons.json
+++ b/src/config/saebelschnaebler_seasons.json
@@ -9,8 +9,8 @@
       {
         "active": true,
         "color": "#000000",
-        "data": "data/saebelschnaebler/055T-2O23.csv",
-        "name": "PIAV-5442613-Oland",
+        "data": "data/saebelschnaebler/055T-2023.csv",
+        "name": "5442613",
         "id": "(055T)",
         "opacity": 1
       },
@@ -18,7 +18,7 @@
         "active": true,
         "color": "#1CE6FF",
         "data": "data/saebelschnaebler/056T-2023.csv",
-        "name": "PIAV-5442620-Oland",
+        "name": "5442620",
         "id": "(056T)",
         "opacity": 1
       }
