--- a/src/config/whitestorks_hamburg_seasons.json
+++ b/src/config/whitestorks_hamburg_seasons.json
@@ -2,68 +2,126 @@
     {
         "action": "mdi-crosshairs-gps",
         "active": true,
-        "title": "2021 / 2022",
+        "title": "2022 / 2023",
+        "dashOldOnes": [3650,3650,3650],
         "turtledoves": [
             {
                 "active": true,
                 "color": "#ffff01",
-                "data": "data/WhiteStork-Hamburg-02-2021_2022.csv",
+                "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-02-2022_2023.csv",
                 "name": "Alexander",
                 "opacity": 1
             },
             {
                 "active": true,
                 "color": "#66642B",
-                "data": "data/WhiteStork-Hamburg-09-2021_2022.csv",
+                "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-09-2022_2023.csv",
                 "name": "Christian-Eike",
                 "opacity": 1
             },
             {
                 "active": true,
                 "color": "#0b7ac1",
-                "data": "data/WhiteStork-Hamburg-05-2021_2022.csv",
+                "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-05-2022_2023.csv",
                 "name": "Hanne",
                 "opacity": 1
             },
             {
                 "active": true,
                 "color": "#8102b3",
-                "data": "data/WhiteStork-Hamburg-03-2021_2022.csv",
+                "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-03-2022_2023.csv",
                 "name": "Jan",
                 "opacity": 1
             },
             {
                 "active": true,
                 "color": "#FF7F00",
-                "data": "data/WhiteStork-Hamburg-06-2021_2022.csv",
+                "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-06-2022_2023.csv",
                 "name": "Jürgen",
                 "opacity": 1
             },
             {
                 "active": true,
                 "color": "#CFCF63",
-                "data": "data/WhiteStork-Hamburg-08-2021_2022.csv",
+                "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-08-2022_2023.csv",
                 "name": "Michael",
                 "opacity": 1
             },
             {
                 "active": true,
                 "color": "#87d5fb",
-                "data": "data/WhiteStork-Hamburg-04-2021_2022.csv",
+                "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-04-2022_2023.csv",
+                "name": "Mimi",
+                "opacity": 1
+            }
+        ]
+    },
+    {
+        "action": "mdi-crosshairs-gps",
+        "active": false,
+        "title": "2021 / 2022",
+        "dashOldOnes": [3650,3650,3650],
+        "turtledoves": [
+            {
+                "active": false,
+                "color": "#ffff01",
+                "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-02-2021_2022.csv",
+                "name": "Alexander",
+                "opacity": 1
+            },
+            {
+                "active": false,
+                "color": "#66642B",
+                "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-09-2021_2022.csv",
+                "name": "Christian-Eike",
+                "opacity": 1
+            },
+            {
+                "active": false,
+                "color": "#0b7ac1",
+                "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-05-2021_2022.csv",
+                "name": "Hanne",
+                "opacity": 1
+            },
+            {
+                "active": false,
+                "color": "#8102b3",
+                "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-03-2021_2022.csv",
+                "name": "Jan",
+                "opacity": 1
+            },
+            {
+                "active": false,
+                "color": "#FF7F00",
+                "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-06-2021_2022.csv",
+                "name": "Jürgen",
+                "opacity": 1
+            },
+            {
+                "active": false,
+                "color": "#CFCF63",
+                "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-08-2021_2022.csv",
+                "name": "Michael",
+                "opacity": 1
+            },
+            {
+                "active": false,
+                "color": "#87d5fb",
+                "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-04-2021_2022.csv",
                 "name": "Mimi",
                 "opacity": 1
             },
             {
-                "active": true,
+                "active": false,
                 "color": "#05ab03",
-                "data": "data/WhiteStork-Hamburg-01-2021_2022.csv",
+                "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-01-2021_2022.csv",
                 "name": "Ombeni",
                 "opacity": 1
             },
             {
-                "active": true,
+                "active": false,
                 "color": "#681B0F",
-                "data": "data/WhiteStork-Hamburg-11-2021_2022.csv",
+                "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-11-2021_2022.csv",
                 "name": "Tina",
                 "opacity": 1
             }
@@ -73,88 +131,89 @@
         "action": "mdi-crosshairs-gps",
         "active": false,
         "title": "2020 / 2021",
+        "dashOldOnes": [3650,3650,3650],
         "turtledoves": [
             {
                 "active": false,
                 "color": "#ffff01",
-                "data": "data/WhiteStork-Hamburg-02-2020_2021.csv",
+                "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-02-2020_2021.csv",
                 "name": "Alexander",
                 "opacity": 1
             },
             {
                 "active": false,
                 "color": "#66642B",
-                "data": "data/WhiteStork-Hamburg-09-2020_2021.csv",
+                "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-09-2020_2021.csv",
                 "name": "Christian-Eike",
                 "opacity": 1
             },
             {
                 "active": false,
                 "color": "#0b7ac1",
-                "data": "data/WhiteStork-Hamburg-05-2020_2021.csv",
+                "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-05-2020_2021.csv",
                 "name": "Hanne",
                 "opacity": 1
             },
             {
                 "active": false,
                 "color": "#8102b3",
-                "data": "data/WhiteStork-Hamburg-03-2020_2021.csv",
+                "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-03-2020_2021.csv",
                 "name": "Jan",
                 "opacity": 1
             },
             {
                 "active": false,
                 "color": "#FF7F00",
-                "data": "data/WhiteStork-Hamburg-06-2020_2021.csv",
+                "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-06-2020_2021.csv",
                 "name": "Jürgen",
                 "opacity": 1
             },
             {
                 "active": false,
                 "color": "#CFCF63",
-                "data": "data/WhiteStork-Hamburg-08-2020_2021.csv",
+                "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-08-2020_2021.csv",
                 "name": "Michael",
                 "opacity": 1
             },
             {
                 "active": false,
                 "color": "#87d5fb",
-                "data": "data/WhiteStork-Hamburg-04-2020_2021.csv",
+                "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-04-2020_2021.csv",
                 "name": "Mimi",
                 "opacity": 1
             },
             {
                 "active": false,
                 "color": "#05ab03",
-                "data": "data/WhiteStork-Hamburg-01-2020_2021.csv",
+                "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-01-2020_2021.csv",
                 "name": "Ombeni",
                 "opacity": 1
             },
             {
                 "active": false,
                 "color": "#4E3723",
-                "data": "data/WhiteStork-Hamburg-10-2020_2021.csv",
+                "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-10-2020_2021.csv",
                 "name": "Regina",
                 "opacity": 1
             },
             {
                 "active": false,
                 "color": "#C5A144",
-                "data": "data/WhiteStork-Hamburg-07-2020_2021.csv",
+                "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-07-2020_2021.csv",
                 "name": "Stefan",
                 "opacity": 1
             },
             {
                 "active": false,
                 "color": "#681B0F",
-                "data": "data/WhiteStork-Hamburg-11-2020_2021.csv",
+                "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-11-2020_2021.csv",
                 "name": "Tina",
                 "opacity": 1
             },
             {
                 "active": false,
                 "color": "#CB8460",
-                "data": "data/WhiteStork-Hamburg-12-2020_2021.csv",
+                "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-12-2020_2021.csv",
                 "name": "Trunca",
                 "opacity": 1
             }
@@ -164,46 +223,47 @@
         "action": "mdi-crosshairs-gps",
         "active": false,
         "title": "2019 / 2020",
+        "dashOldOnes": [3650,3650,3650],
         "turtledoves": [
             {
                 "active": false,
                 "color": "#ffff01",
-                "data": "data/WhiteStork-Hamburg-02-2019_2020.csv",
+                "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-02-2019_2020.csv",
                 "name": "Alexander",
                 "opacity": 0.75
             },
             {
                 "active": false,
                 "color": "#0b7ac1",
-                "data": "data/WhiteStork-Hamburg-05-2019_2020.csv",
+                "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-05-2019_2020.csv",
                 "name": "Hanne",
                 "opacity": 0.75
             },
             {
                 "active": false,
                 "color": "#8102b3",
-                "data": "data/WhiteStork-Hamburg-03-2019_2020.csv",
+                "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-03-2019_2020.csv",
                 "name": "Jan",
                 "opacity": 0.75
             },
             {
                 "active": false,
                 "color": "#FF7F00",
-                "data": "data/WhiteStork-Hamburg-06-2019_2020.csv",
+                "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-06-2019_2020.csv",
                 "name": "Jürgen",
                 "opacity": 0.75
             },
             {
                 "active": false,
                 "color": "#87d5fb",
-                "data": "data/WhiteStork-Hamburg-04-2019_2020.csv",
+                "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-04-2019_2020.csv",
                 "name": "Mimi",
                 "opacity": 0.75
             },
             {
                 "active": false,
                 "color": "#05ab03",
-                "data": "data/WhiteStork-Hamburg-01-2019_2020.csv",
+                "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-01-2019_2020.csv",
                 "name": "Ombeni",
                 "opacity": 0.75
             }
